--- a/favoritas.html
+++ b/favoritas.html
@@ -18,7 +18,7 @@
           <nav class="uk-navbar-container navMia" uk-navbar>
             <div class="buscador">
               <a class="logoHeader" href="https://www.themoviedb.org/">
-              <img  class="logo" src="imagenes/tmdblogo.svg" alt=""></a>
+              <img  class="logo" src="img/tmdblogo.svg" alt=""></a>
               <form class="uk-search uk-search-default">
                 <span uk-search-icon></span>
                 <input class="uk-search-input buscar" type="search" placeholder="Buscar...">
@@ -75,7 +75,7 @@
     <!-- footer -->
     <a class="logoa" href="https://www.themoviedb.org/">
     <footer>
-      <img class="logo" src="imagenes/tmdblogo.svg" alt="">
+      <img class="logo" src="img/tmdblogo.svg" alt="">
       <p class="firma">Ian Jamui, Timoteo Karl, Bruno</p>
     </footer>
     </a>
