--- a/home.html
+++ b/home.html
@@ -9,6 +9,10 @@
 <!-- UIkit JS -->
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit-icons.min.js"></script>
+<!--Buscador JS-->
+<script type="text/javascript" src="buscador.js">
+
+</script>
 <link rel="stylesheet" href="home.css">
   </head>
   <body>
@@ -18,10 +22,10 @@
         <nav class="uk-navbar-container navMia" uk-navbar>
           <div class="buscador">
             <a class="logoHeader" href="https://www.themoviedb.org/">
-            <img  class="logo" src="imagenes/tmdblogo.svg" alt=""></a>
-            <form class="uk-search uk-search-default">
+            <img  class="logo" src="img/tmdblogo.svg" alt=""></a>
+            <form class="uk-search uk-search-navbar" action="resultados.html" method="get">
               <span uk-search-icon></span>
-              <input class="uk-search-input buscar" type="search" placeholder="Buscar...">
+              <input class="uk-search-input buscar" type="search" placeholder="Buscar..." name="busqueda">
             </form>
           </div>
           <div class="uk-navbar-right">
@@ -117,7 +121,7 @@
 <!-- footer -->
 <a class="logoa" href="https://www.themoviedb.org/">
 <footer>
-  <img class="logo" src="imagenes/tmdblogo.svg" alt="">
+  <img class="logo" src="img/tmdblogo.svg" alt="">
   <p class="firma">Ian Jamui, Timoteo, Bruno</p>
 </footer>
 </a>
