--- a/populares.html
+++ b/populares.html
@@ -9,9 +9,7 @@
 <!-- UIkit JS -->
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit-icons.min.js"></script>
-<script src="populares.js" type="text/javascript">
 
-</script>
 <link rel="stylesheet" href="populares.css">
   </head>
   <body>
@@ -80,5 +78,6 @@
     </footer>
     </a>
     <!-- footer -->
+    <script src="populares.js" type="text/javascript"></script>
   </body>
 </html>
