--- a/home.html
+++ b/home.html
@@ -10,9 +10,7 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit-icons.min.js"></script>
 <!--Buscador JS-->
-<script type="text/javascript" src="buscador.js">
-
-</script>
+<script type="text/javascript" src="buscador.js"></script>
 <link rel="stylesheet" href="home.css">
   </head>
   <body>
