--- a/resultados.html
+++ b/resultados.html
@@ -7,11 +7,11 @@
   </head>
   <body>
 
-       <h1 id="titulos" class="primero">
+       <h1 id="titulos" class="primero">Busqueda
          <!-- Busqueda -->
        </h1>
        <div class="div-resultados">
-         <ul class="resultados">
+         <ul class="resultados">Resultados
            <!-- api -->
          </ul>
        </div>
