--- a/home.html
+++ b/home.html
@@ -17,8 +17,9 @@
 <div class="todo">
   <!--   Header   -->
       <header>
-        <nav class="uk-navbar-container navMia" uk-navbar>
-          <a class="logoHeader" href="https://www.themoviedb.org/">
+            <a class="logoHeader" href="https://www.themoviedb.org/">
+        <nav class="uk-navbar-container navMia " uk-navbar>
+          <div class="buscador">
             <img  class="logo" src="img/tmdblogo.svg" alt=""></a>
           <div class="container_buscador">
             <form class="uk-search uk-search-navbar" action="resultados.html" method="get">
@@ -60,7 +61,7 @@
 
      <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
-         <ul id="populares" class="uk-slider-items uk-child-width-1-2@s uk-grid populares">
+         <ul id="populares" class="uk-slider-items uk-child-width-1-2@s uk-width-child-1-3@m uk-child-width-1-4@l uk-grid populares">
 
          </ul>
 
@@ -81,7 +82,7 @@
 
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
-        <ul id="valoradas" class="uk-slider-items uk-child-width-1-2@s uk-grid populares">
+        <ul id="valoradas" class="uk-slider-items uk-child-width-1-2@s uk-width-child-1-3@m uk-child-width-1-4@l uk-grid populares">
 
         </ul>
 
@@ -102,7 +103,7 @@
 
      <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
-         <ul id="aire" class="uk-slider-items uk-child-width-1-2@s uk-grid populares">
+         <ul id="aire" class="uk-slider-items uk-child-width-1-2@s uk-width-child-1-3@m uk-child-width-1-4@l uk-grid populares">
 
          </ul>
 
