--- a/seriesxgenero.html
+++ b/seriesxgenero.html
@@ -80,7 +80,7 @@
 
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
-        <ul id="genero" class="uk-slider-items uk-child-width-1-2@s uk-grid populares">
+        <ul id="genero" class="uk-slider-items uk-child-width-1-2@s uk-width-child-1-3@m uk-child-width-1-4@l uk-grid populares">
 
         </ul>
 
