--- a/alAire.html
+++ b/alAire.html
@@ -17,16 +17,17 @@
   <body>
     <!--   Header   -->
         <header>
-          <nav class="uk-navbar-container navMia" uk-navbar>
-            <div class="buscador">
               <a class="logoHeader" href="https://www.themoviedb.org/">
+          <nav class="uk-navbar-container navMia uk-visible@m .uk-flex-right" uk-navbar>
+            <div class="buscador">
               <img  class="logo" src="img/tmdblogo.svg" alt=""></a>
-              <form class="uk-search uk-search-default">
+            <div class="container_buscador">
+              <form class="uk-search uk-search-navbar" action="resultados.html" method="get">
                 <span uk-search-icon></span>
-                <input class="uk-search-input buscar" type="search" placeholder="Buscar...">
+                <input class="uk-search-input" type="search" placeholder="Buscar..." name="busqueda">
               </form>
             </div>
-            <div class="uk-navbar-right">
+            <div class="uk-navbar-right uk-flex-wrap-around	">
 
               <ul class="uk-navbar-nav">
                 <li class="uk-active li-menu"><a class="a-menu" href=home.html>Home</a></li>
@@ -50,6 +51,40 @@
 
       </div>
     </nav>
+  <!-- Menu desplegable -->
+    <nav class="uk-navbar uk-navbar-container uk-margin menucel uk-hidden@m">
+        <div class="uk-navbar-left">
+            <a class="uk-navbar-toggle uk-button uk-button-default"  uk-toggle="target: #offcanvas-overlay">
+                <span uk-navbar-toggle-icon></span> <span class="uk-margin-small-left">Menu</span>
+            </a>
+
+            <div id="offcanvas-overlay" uk-offcanvas="overlay: true">
+                <div class="uk-offcanvas-bar">
+
+                    <button class="uk-offcanvas-close" type="button" uk-close></button>
+
+
+                    <div class="uk-navbar-right">
+                      <ul class="uk-navbar-nav uk-flex-column">
+                        <li class="uk-active li-menu"><a class="a-menu" href=home.html>Home</a></li>
+                        <li><a class="a-menu li-menu" href=generos.html>Generos</a>
+                          <div class="uk-navbar-dropdown">
+                              <ul id="listaGeneros" class="uk-nav uk-navbar-dropdown-nav">
+
+                              </ul>
+                          </div>
+                        </li>
+                        <li><a class="a-menu li-menu" href=favoritas.html>Favoritos</a></li>
+                      </ul>
+              </div>
+
+
+                </div>
+            </div>
+
+        </div>
+    </nav>
+
           </header>
 
     <!-- Header -->
