--- a/favoritas.html
+++ b/favoritas.html
@@ -20,7 +20,7 @@
             <div class="buscador">
               <img  class="logo" src="img/tmdblogo.svg" alt=""></a>
             <div class="container_buscador">
-              <form class="uk-search uk-search-navbar" action="resultados.html" method="get">
+              <form class="uk-search uk-search-navbar" action="resultados22.html" method="get">
                 <span uk-search-icon></span>
                 <input class="uk-search-input" type="search" placeholder="Buscar..." name="busqueda">
               </form>
