--- a/seriesxgenero.html
+++ b/seriesxgenero.html
@@ -21,7 +21,7 @@
           <div class="buscador">
             <img  class="logo" src="img/tmdblogo.svg" alt=""></a>
           <div class="container_buscador">
-            <form class="uk-search uk-search-navbar" action="resultados.html" method="get">
+            <form class="uk-search uk-search-navbar" action="resultados22.html" method="get">
               <span uk-search-icon></span>
               <input class="uk-search-input" type="search" placeholder="Buscar..." name="busqueda">
             </form>
@@ -50,7 +50,7 @@
 
     </div>
   </nav>
-  <!-- Menu desplegable -->
+<!-- Menu desplegable -->
   <nav class="uk-navbar uk-navbar-container uk-margin menucel uk-hidden@m">
       <div class="uk-navbar-left">
           <a class="uk-navbar-toggle uk-button uk-button-default"  uk-toggle="target: #offcanvas-overlay">
@@ -87,7 +87,9 @@
         </header>
 
   <!-- Header -->
-  <form>
+
+
+  <!-- <form>
 
       <div class="uk-margin">
       <div uk-form-custom="target: > * > span:first-child">
@@ -107,7 +109,7 @@
       </div>
   </div>
 
-</form>
+</form> -->
 <h2 id="nombreGenero">Populares</h2>
 
 <!-- Carrousel populares -->
