--- a/resultados22.html
+++ b/resultados22.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <!-- UIkit CSS -->
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <!-- UIkit CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/css/uikit.min.css" />
 
 <!-- UIkit JS -->
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.2/dist/js/uikit-icons.min.js"></script>
-<script src="valoradas.js" type="text/javascript">
-
-</script>
-<link rel="stylesheet" href="valoradas.css">
-  </head>
+<!--Buscador JS-->
+<script type="text/javascript" src="buscador22.js"></script>
+<link rel="stylesheet" href="resultados22.css">
+</head>
   <body>
     <!--   Header   -->
         <header>
@@ -88,32 +87,33 @@
           </header>
 
     <!-- Header -->
-    <h2>Programas mejor valorados</h2>
-<!-- Lista -->
-<div class="uk-overflow-auto">
-    <table id="infinite-list" class="uk-table uk-table-hover uk-table-middle uk-table-divider">
-        <thead>
-            <tr>
-                <th class="uk-table-shrink">Foto</th>
-                <th class="uk-width-small">Nombre</th>
-                <th class="uk-table-expand">Sinopsis</th>
-                <th class="uk-table-shrink uk-text-nowrap">Valoracion</th>
-            </tr>
-        </thead>
-        <tbody id="tbvaloradas">
 
-        </tbody>
-    </table>
-</div>
-<div class="uk-child-width-1-2@s" uk-grid>
-<!-- Lista -->
-    <!-- footer -->
-    <a class="logoa" href="https://www.themoviedb.org/">
-    <footer>
-      <img class="logo" src="img/tmdblogo.svg" alt="">
-      <p class="firma">Ian Jamui, Timoteo, Bruno</p>
-    </footer>
-    </a>
-    <!-- footer -->
+
+       <h2 id="busqueda">Populares</h2>
+
+       <!-- Carrousel populares -->
+       <div uk-slider="center: true">
+
+           <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+
+               <ul id="resultados" class="uk-slider-items uk-child-width-1-2@s uk-width-child-1-3@m uk-child-width-1-4@l uk-grid populares">
+
+               </ul>
+
+               <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+               <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+
+           </div>
+
+           <!-- <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul> -->
+
+       </div>
+       <!-- Carrousel populares -->
+
+
   </body>
 </html>
+
+  <script type="text/javascript" src="buscador.js">
+
+  </script>
