--- a/resultados22.html
+++ b/resultados22.html
@@ -89,7 +89,8 @@
     <!-- Header -->
 
 
-       <h2 id="busqueda">Populares</h2>
+       <h2 id="busqueda"></h2>
+       <p id="sinResultados">resultados</p>
 
        <!-- Carrousel populares -->
        <div uk-slider="center: true">
@@ -113,7 +114,3 @@
 
   </body>
 </html>
-
-  <script type="text/javascript" src="buscador.js">
-
-  </script>
