--- a/buscadorAvanzado.html
+++ b/buscadorAvanzado.html
@@ -96,14 +96,14 @@
                 <input class="uk-input" id="form-horizontal-text" type="text" placeholder="Su busqueda">
             </div>
         </div>
-
+        <input type="submit">
       </form>
 
         <div class="uk-margin">
             <label class="uk-form-label" for="form-horizontal-select">Con genero:</label>
             <div class="uk-form-controls">
                 <select id="listaGenerosCon" class="uk-select" name="conGenero" form="avanzado">
-                    <option>Option 01</option>
+                    <option>Seleccione un genero</option>
                 </select>
             </div>
         </div>
@@ -112,7 +112,7 @@
             <label class="uk-form-label" for="form-horizontal-select">Sin genero:</label>
             <div class="uk-form-controls">
                 <select id="listaGenerosSin" class="uk-select" name="sinGenero" form="avanzado">
-                    <option>Option 01</option>
+                    <option>Seleccione un genero</option>
                 </select>
             </div>
         </div>
