--- a/home.html
+++ b/home.html
@@ -17,10 +17,10 @@
 <div class="todo">
   <!--   Header   -->
       <header>
-            <a class="logoHeader" href="https://www.themoviedb.org/">
+            <a class="logoHeader" href="#">
         <nav class="uk-navbar-container navMia uk-visible@m .uk-flex-right" uk-navbar>
           <div class="buscador">
-            <img  class="logo" src="img/tmdblogo.svg" alt=""></a>
+            <img  class="logo" src="img/logo2.jpg" alt=""></a>
           <div class="container_buscador">
             <form class="uk-search uk-search-navbar" action="resultados22.html" method="get">
               <span uk-search-icon></span>
